[package]
name = "pages"
version = "0.1.0"
edition = "2024"

[dependencies]
brotli = "8.0.2"
dashmap = "6.1.0"
flate2 = "1.1.5"
futures-executor = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.17", features = ["http1", "http2", "server"] }
mimetype-detector = "0.2.6"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[[bin]]
name = "endpoint"
path = "src/endpoint/main.rs"

[[bin]]
name = "root"
path = "src/root/main.rs"

